--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
 
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/propiosBAV.css" rel="stylesheet" />
+        <link href="css/base.css" rel="stylesheet" />
     </head>
    
 
@@ -92,7 +92,7 @@
                     <p class="card-text">Soy Victor, un aventurero. Me considero amable, inteligente e introvertido. Aunque me considero un pensador y un manitas, me gusta colaborar en equipo. Mi pasatiempo preferido es curiosear por la red, salir a correr al campo y jugar. Actualmente estoy participando en algo nuevo para mi, un Boot Camp en Desarrollo Web.</p>
                   </div>
                   
-                  <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Víctor"><img src="assets/img/svg/montanas/montana-mar.svg"></a></button>
+                  <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Víctor"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
               </div>
               <div id="anny" class="card">
                   <img src="assets/img/equipo/anny.jpg" class="card-img-top" alt="Anny">
@@ -100,7 +100,7 @@
                   <h3 class="card-title">Anny Karolina</h3>
                   <p class="card-text">Luchadora y trabajadora incansable, amiga de sus compañeros, responsable y tenaz en el esfuerzo de superación, que me ha llevado hacer esta preparación y así obtener una mejor formación profesional.</p>
                 </div>
-                <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Anny Karolina"><img src="assets/img/svg/montanas/montana-azul.svg"></a></button>
+                <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Anny Karolina"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
               </div>
               <div id="brayan" class="card">
                 <img src="assets/img/equipo/brayan.jpg" class="card-img-top" alt="Brayan">
@@ -108,7 +108,7 @@
                   <h3 class="card-title">Brayan</h3>
                   <p class="card-text">Hola, me llamo Brayan, tengo 22 años y vivo en madrid, soy una persona tranquila y un poco seria al que le gusta estar más en casa viendo series con la manta y las palomitas que salir al peligroso mundo exterior, aunque me gusta salir de vez en cuando para hacer ejercicio. Me encanta el frio y la lluvia y odio el verano y el calor, soy amante de los animales y de las almendras.</p>
                 </div>
-                <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/brayan" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja.svg"></a></button>
+                <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/brayan" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja-cv.svg"></a></button>
               </div>
               <div id="ampa" class="card">
                   <img src="assets/img/equipo/ampa.jpg" class="card-img-top" alt="Ampa">
@@ -116,7 +116,7 @@
                     <h3 class="card-title">Ampa</h3>
                     <p class="card-text">Soy una persona entusiasta, creativa y curiosa. Me gusta trabajar en equipo y mantenerme siempre activa. Estoy formándome como desarrolladora web porque creo que es un sector en el que siempre estaré en constante aprendizaje y eso me motiva.</p>
                   </div>
-                  <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/amparo/" title="Enlace externo: CV Ampa"><img src="assets/img/svg/montanas/montana-azul.svg"></a></button>
+                  <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/amparo/" title="Enlace externo: CV Ampa"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
               </div>
                 <div id="bea" class="card">
                   <img src="assets/img/equipo/beatriz.jpg" class="card-img-top" alt="Beatriz">
@@ -125,7 +125,7 @@
                     <p class="card-text">Periodista de formación, mi personalidad curiosa siempre me ha llevado a aprender más sobre las cosas.
                         En mi primer trabajo como gestora de contenidos descubrí mi vocación por los entornos digitales y nació mi interés por convertirme en Coder. Me gusta viajar, ir al teatro y estar en buena compañía.</p>
                   </div>
-                  <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Bea"><img src="assets/img/svg/montanas/montana-mar.svg"></a></button>
+                  <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Bea"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
                 </div>
               </div>
           </section>
