--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -7,7 +7,8 @@
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <title>Barra de navegación</title>
+        <link rel="stylesheet" href="css/styles-nav.css">
+        <title>Web Grupal de Bi Ei Bi, el equipo con buena vibra</title>
       
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
