Footer and Footer Icon size restored
Recuperación del tamaño del icono de instagram y del footer

--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -211,7 +211,7 @@
         </section>
         <!--footer-->
         <footer class="footer py-4">
-            <div class="container">
+            <div class="footer-info">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-center">Copyright © BiEiVi 2020</div>
                     <div>
