--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -172,63 +172,138 @@
 
     </section>
     </main>
-        <!--contacto-->
-
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading">Contacta con Nosotros</h2>
+    <!--Deja tu Comentario-->
+  <div class="comments">
+    <div class="text-center">
+      <h2 class="section-heading">Déjanos tu Comentario</h2>
+    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="media g-mb-30 media-comment">
+            <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Avatar de Pedro">
+              <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                <div class="g-mb-15">
+                  <h5 class="h5 g-color-gray-dark-v1 mb-0">Pedro</h5>
+                    <span class="g-color-gray-dark-v4 g-font-size-12">Hace 3 días</span>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Tu nombre *" required="required" data-validation-required-message="Por favor, escriba su nombre.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Tu Email *" required="required" data-validation-required-message="Por favor, introduzca su dirección de correo electrónico.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <input class="form-control" id="phone" type="tel" placeholder="Su teléfono *" required="required" data-validation-required-message="Por favor, introduzca su número de teléfono.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <textarea class="form-control" id="message" placeholder="Tu mensaje *" required="required" data-validation-required-message="Ingrese un mensaje."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Enviar Mensaje</button>
-                    </div>
-                </form>
+                  <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
+                    felis in faucibus ras purus odio</p>
+                  <ul class="list-inline d-sm-flex my-0">
+                    <li class="list-inline-item g-mr-20">
+                      <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                        <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
+                        200
+                      </a>
+                    </li>
+                    <li class="list-inline-item g-mr-20">
+                      <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                        <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
+                        0
+                      </a>
+                    </li>
+                    <li class="list-inline-item ml-auto">
+                      <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                        <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
+                            Responder
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-        </section>
-        <!--footer-->
-        <footer class="footer py-4">
-            <div class="footer-info">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-center">Copyright © BiEiVi 2020</div>
-                    <div>
-                        <a href="http://www.instagram.com/bieivi_buenavibra" target="_blank" title="Enlace externo: Instagram de BiEiVi">
-                            <svg class="row fa fa-align-center" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
-                                <path class="st0" d="M15 2.8c4 0 4.4 0 6 0.1 1.4 0.1 2.2 0.3 2.8 0.5 0.7 0.3 1.2 0.6 1.7 1.1 0.5 0.5 0.8 1 1.1 1.7C26.8 6.8 27 7.6 27.1 9c0.1 1.6 0.1 2 0.1 6s0 4.4-0.1 6c-0.1 1.4-0.3 2.2-0.5 2.8 -0.3 0.7-0.6 1.2-1.1 1.7 -0.5 0.5-1 0.8-1.7 1.1 -0.5 0.2-1.3 0.4-2.8 0.5 -1.6 0.1-2 0.1-6 0.1s-4.4 0-6-0.1c-1.4-0.1-2.2-0.3-2.8-0.5 -0.7-0.3-1.2-0.6-1.7-1.1 -0.5-0.5-0.8-1-1.1-1.7C3.2 23.2 3 22.4 2.9 21c-0.1-1.6-0.1-2-0.1-6s0-4.4 0.1-6C3 7.6 3.2 6.8 3.4 6.2 3.7 5.5 4 5.1 4.5 4.5c0.5-0.5 1-0.8 1.7-1.1C6.8 3.2 7.6 3 9 2.9 10.6 2.8 11 2.8 15 2.8M15 0.2c-4 0-4.5 0-6.1 0.1C7.3 0.3 6.2 0.6 5.3 0.9c-1 0.4-1.8 0.9-2.6 1.7C1.8 3.5 1.3 4.3 0.9 5.3c-0.4 0.9-0.6 2-0.7 3.6C0.2 10.5 0.1 11 0.1 15c0 4 0 4.5 0.1 6.1 0.1 1.6 0.3 2.7 0.7 3.6 0.4 1 0.9 1.8 1.7 2.6 0.8 0.8 1.7 1.3 2.6 1.7 0.9 0.4 2 0.6 3.6 0.7 1.6 0.1 2.1 0.1 6.1 0.1s4.5 0 6.1-0.1c1.6-0.1 2.7-0.3 3.6-0.7 1-0.4 1.8-0.9 2.6-1.7 0.8-0.8 1.3-1.7 1.7-2.6 0.4-0.9 0.6-2 0.7-3.6 0.1-1.6 0.1-2.1 0.1-6.1s0-4.5-0.1-6.1c-0.1-1.6-0.3-2.7-0.7-3.6 -0.4-1-0.9-1.8-1.7-2.6 -0.8-0.8-1.7-1.3-2.6-1.7 -0.9-0.4-2-0.6-3.6-0.7C19.5 0.2 19 0.2 15 0.2L15 0.2z"/>
-                                <path class="st0" d="M15 7.4c-4.2 0-7.6 3.4-7.6 7.6s3.4 7.6 7.6 7.6 7.6-3.4 7.6-7.6S19.2 7.4 15 7.4zM15 20c-2.7 0-5-2.2-5-5s2.2-5 5-5c2.7 0 5 2.2 5 5S17.7 20 15 20z"/>
-                                <circle class="st0" cx="22.9" cy="7.1" r="1.8"/>
-                            </svg>
+            <div class="col-md-12">
+              <div class="media g-mb-30 media-comment">
+                <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Avatar de Rocío">
+                <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                  <div class="g-mb-15">
+                    <h5 class="h5 g-color-gray-dark-v1 mb-0">Rocío</h5>
+                      <span class="g-color-gray-dark-v4 g-font-size-12">Hace 1 día</span>
+                  </div>
+                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
+                        felis in faucibus ras purus odio</p>
+                    <ul class="list-inline d-sm-flex my-0">
+                      <li class="list-inline-item g-mr-20">
+                        <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                          <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
+                            17
                         </a>
-                    </div>
+                      </li>
+                      <li class="list-inline-item g-mr-20">
+                        <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                          <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
+                            4
+                        </a>
+                      </li>
+                      <li class="list-inline-item ml-auto">
+                        <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                          <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
+                            Responder
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
+       <!--Deja tu comentario | textarea-->
+       <form class="comments.textarea">
+          <div class="text-center form-group col-xs-12 col-sm-12 col-lg-12">
+            <textarea class="form-contro" id="message" placeholder="Tu mensaje *" required="required"></textarea>
+          </div>
+          <div class="text-center">
+          <div id="success"></div>
+            <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Enviar Mensaje</button>
+          </div>
+        </form>
+        <!--contacto-->
+        <section class="contact" id="contact">
+            <div class="text-center">
+              <h2 class="section-heading">Contacta con Nosotros</h2>
+            </div>
+          <form id="contactForm" name="sentMessage" novalidate="novalidate">
+            <div class="row align-items-stretch mb-5">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input class="form-control" id="name" type="text" placeholder="Tu nombre *" required="required" data-validation-required-message="Por favor, escriba su nombre.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <input class="form-control" id="email" type="email" placeholder="Tu Email *" required="required" data-validation-required-message="Por favor, introduzca su dirección de correo electrónico.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group mb-md-0">
+                  <input class="form-control" id="phone" type="tel" placeholder="Su teléfono *" required="required" data-validation-required-message="Por favor, introduzca su número de teléfono.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group form-group-textarea mb-md-0">
+                    <textarea class="form-control" id="message" placeholder="Tu comentario *" required="required" data-validation-required-message="Ingrese un mensaje."></textarea>
+                      <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                </div>
+                <div class="text-center">
+                  <div id="success"></div>
+                    <button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Enviar Mensaje</button>
+                </div>
+            </form>
+          </div>
+        </section>
+        <!-- instagram -->
+        <div class="col-lg-12 text-lg-center">
+          <a class="social-icon" href="https://www.instagram.com/bieivi_buenavibra/"><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <!--footer-->
+        <footer>
+          <div class="footer-info">
+            <div class="col-lg-4 text-lg-center">Copyright ©  BiEiVi 2020</div>
+          </div>
         </footer>
-        <!-- Incluye Bootstrap ~# jQuery-->
+        <!-- Incluye Bootstrap ~# jQuery col-lg-4 text-lg-left-->
+        <script src="https://kit.fontawesome.com/a880d7ce5b.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-       
-  </body>
+</body>
 </html>
