Cambios última hora

--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -29,7 +29,7 @@
 
         <div>  
             <a class="navbar-brand" href="#">
-            <img src="./assets/img/png/logos/logo-positivo.png" width="80" height="80" class="d-inline-block align-top" alt="Logo de BiEiBi" loading="lazy">
+            <img class="logo-nav" src="./assets/img/png/logos/logo-positivo.png" width="80" height="80" class="d-inline-block align-top" alt="Logo de BiEiBi" loading="lazy">
           </a>
         </div>
 
@@ -72,7 +72,7 @@
     
     <main class="container">
 
-      <div class="welcome">
+      <div class="welcome" >
 
         
           <img class="welcome-img" src="assets/img/logosobre.svg">
@@ -303,14 +303,16 @@
         </section>
         <!-- instagram -->
         <div class="col-lg-12 d-flex justify-content-center">
-          <a class="social-icon" href="https://www.instagram.com/bieivi_buenavibra/"><i class="fab fa-instagram-square"></i></a>
+          <a class="social-icon" target="_blank" href="https://www.instagram.com/bieivi_buenavibra/"><i class="fab fa-instagram-square"></i></a>
         </div>
+        <a href="#page-top"><img class="flecha-arriba" src="assets/img/png/flechas/flechaarribamar.png"></a>
         <!--footer-->
         <footer>
           <div class="footer-info">
             <div class="col-lg-4 text-lg-center">Copyright ©  BiEiVi 2020</div>
           </div>
         </footer>
+
         <!-- Incluye Bootstrap ~# jQuery col-lg-4 text-lg-left-->
         <script src="https://kit.fontawesome.com/a880d7ce5b.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
