--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -112,7 +112,7 @@
                 <div class="card-body">
                   <h3 class="card-title">Brayan</h3>
                   <h5>Developer</h5>
-                  <p class="card-text">Hola, me llamo Brayan, tengo 22 años y vivo en madrid, soy una persona tranquila y un poco seria al que le gusta estar más en casa viendo series con la manta y las palomitas que salir al peligroso mundo exterior, aunque me gusta salir de vez en cuando para hacer ejercicio. Me encanta el frio y la lluvia y odio el verano y el calor, soy amante de los animales y de las almendras.</p>
+                  <p class="card-text">Mi nombre es Brayan, tengo 22 años. Soy una persona tranquila que le gusta el deporte y las series. Me encanta el frio y la lluvia y odio el verano y el calor. Actualmente estoy cursando un  Boot Camp de Desarrollo web.</p>
                 </div>
                 <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/brayan" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja-cv.svg"></a></button>
               </div>
@@ -145,7 +145,13 @@
 
                <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=1BJ2e9sKNMvTSU1EIO4XO_q7-h1rI7vORl2HCq3jy_ak&pid=explorer&efh=false&a=v&chrome=false&embedded=true"></iframe>
                </iframe>
-           </div>
+           </div></br>
+        <h3 id="juego"><i>¡Si deseas encontrar una pista, debes ganar una partida al mejor de 3 o bien seguir buscando por tu cuenta!</i></h3>
+           <div class="container_wireframe">
+
+               <iframe class="responsive-iframe" src="https://juegopptbieivi.000webhostapp.com/"></iframe>
+               </iframe>
+           </div>   
 
         <h3 id="wireframe">Wireframes</h3>
         <h5>Desktop Wireframe</h5>
