--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -83,7 +83,7 @@
         
         <div class="row">
           <div class="col-md-6 mb-md-3">
-            <div id="ampa" class="card ml-auto w-75">
+            <div id="ampa" class="card m-auto">
               <img src="assets/img/equipo/ampa.jpg" class="card-img-top" alt="Ampa">
               <div class="card-body">
                 <h3 class="card-title">Ampa</h3>
@@ -93,8 +93,8 @@
               <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/amparo/" title="Enlace externo: CV Ampa" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
             </div>
           </div>
-          <div class="col-md-6">
-            <div id="ampa" class="card mr-auto w-75">
+          <div class="col-md-6 mb-md-3">
+            <div id="bea" class="card m-auto">
               <img src="assets/img/equipo/beatriz.jpg" class="card-img-top" alt="Beatriz">
               <div class="card-body">
                 <h3 class="card-title">Beatriz</h3>
@@ -117,7 +117,7 @@
           </div>
           </div>
           <div class="col-md-4">
-            <div id="anny" class="card h-100">
+            <div id="brayan" class="card h-100">
               <img src="assets/img/equipo/brayan.jpg" class="card-img-top" alt="Brayan">
             <div class="card-body">
               <h3 class="card-title">Brayan</h3>
