Quitar scroll iframe

--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -82,7 +82,7 @@
         <h3 class="equipo">El equipo</h3>
         
         <div class="row">
-          <div class="col-md-6 mb-md-3">
+          <div class="col-md-6 mb-3">
             <div id="ampa" class="card m-auto">
               <img src="assets/img/equipo/ampa.jpg" class="card-img-top" alt="Ampa">
               <div class="card-body">
@@ -93,7 +93,7 @@
               <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/amparo/" title="Enlace externo: CV Ampa" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
             </div>
           </div>
-          <div class="col-md-6 mb-md-3">
+          <div class="col-md-6 mb-3">
             <div id="bea" class="card m-auto">
               <img src="assets/img/equipo/beatriz.jpg" class="card-img-top" alt="Beatriz">
               <div class="card-body">
@@ -105,7 +105,7 @@
               <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Bea" target="_blank"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-3">
             <div id="victor" class="card h-100">
               <img src="assets/img/equipo/victor.jpg" class="card-img-top" alt="Victor">
               <div class="card-body">
@@ -116,7 +116,7 @@
               <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack20-21.alwaysdata.net/cv/victor/" title="Enlace externo: CV Víctor" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
           </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-3">
             <div id="brayan" class="card h-100">
               <img src="assets/img/equipo/brayan.jpg" class="card-img-top" alt="Brayan">
             <div class="card-body">
@@ -127,7 +127,7 @@
             <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/brayan" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja-cv.svg"></a></button>
           </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-3">
             <div id="anny" class="card h-100">
               <img src="assets/img/equipo/anny.jpg" class="card-img-top" alt="Anny">
             <div class="card-body">
@@ -151,14 +151,14 @@
         <h3 id="juego"><i>¡Si deseas encontrar una pista, debes ganar una partida al mejor de 3 o bien seguir buscando por tu cuenta!</i></h3>
            <div class="container_wireframe">
 
-               <iframe class="responsive-iframe" src="https://juegopptbieivi.000webhostapp.com/"></iframe>
+               <iframe class="responsive-iframe" src="https://juegopptbieivi.000webhostapp.com/" scrolling="no"></iframe>
                </iframe>
            </div>   
 
         <h3 id="wireframe">Wireframes</h3>
         <h5>Desktop Wireframe</h5>
             <div class="container_wireframe">
-                <iframe class="responsive-iframe" src="assets/pdf/wireframe-desktop.pdf">
+                <iframe class="responsive-iframe" src="assets/pdf/wireframe-desktop.pdf" scrolling="no">
                </iframe>
             </div><br><br>
             <h5>Mobile Wireframe</h5>
@@ -177,7 +177,7 @@
            <h3>SMACSS</h3>
               <div class="container_wireframe">
 
-                  <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70&pid=explorer&efh=false&a=v&chrome=false&embedded=true">
+                  <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70&pid=explorer&efh=false&a=v&chrome=false&embedded=true" scrolling="no">
                   </iframe>
               </div>
 
