--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -159,8 +159,8 @@
         <h3 id="juego"><i>¡Si deseas encontrar una pista, debes ganar una partida al mejor de 3 o bien seguir buscando por tu cuenta!</i></h3>
            
 
-               <div><img src="assets/img/ppt.png" style="width: 100%;">
-               <a href="https://juegopptbieivi.000webhostapp.com/">Juega piedra,papel o tijera</a>
+               <div>
+                <a title="ppt" href="https://juegopptbieivi.000webhostapp.com/"><img src="assets/img/ppt.png" style="width: 100%;" alt="ppt" /></a>
               </div>
            
         <h3 id="wireframe">Wireframes</h3>
@@ -185,7 +185,7 @@
            <h3>SMACSS</h3>
               <div class="container_wireframe">
 
-                  <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70&pid=explorer&efh=false&a=v&chrome=false&embedded=true" scrolling="no">
+                  <iframe class="responsive-iframe" src="https://docs.google.com/presentation/d/1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70/edit?usp=sharing" scrolling="no">
                   </iframe>
               </div>
               <h3 id="solid">SOLID</h3>
