margenes nav y color nav

--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -42,7 +42,7 @@
             </div>
             </li>
             <li class="nav-item dropdown menu">
-                <a class="nav-link dropdown-toggle" href="projects" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle text-center" href="projects" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Proyectos</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#manual">Manual</a>
@@ -52,7 +52,7 @@
             </div>
             </li>
             <li class="nav-item dropdown menu">
-              <a class="nav-link dropdown-toggle" href="projects" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-center" href="projects" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Pildoras</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#pills">Smacss</a>
@@ -62,7 +62,7 @@
           </li>
            
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contacto</a>
+              <a class="nav-link text-center" href="#contact">Contacto</a>
             </li>
             
           </ul>
