--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -48,7 +48,7 @@
                 <a class="dropdown-item" href="#manual">Manual</a>
                 <a class="dropdown-item" href="#juego">PPT</a>
                 <a class="dropdown-item" href="#wireframe">Wireframe</a>               
-                <a class="dropdown-item" href="#">Sitio Web</a>
+               
             </div>
             </li>
             <li class="nav-item dropdown menu">
@@ -110,7 +110,7 @@
                 <p class="card-text">Periodista de formación, mi personalidad curiosa siempre me ha llevado a aprender más sobre las cosas.
                   En mi primer trabajo como gestora de contenidos descubrí mi vocación por los entornos digitales y nació mi interés por convertirme en Coder.</p>
               </div>
-              <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Bea" target="_blank"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
+              <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/beatriz/" title="Enlace externo: CV Bea" target="_blank"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
             </div>
           </div>
           <div class="col-md-4 mb-3">
@@ -121,7 +121,7 @@
                 <h5>Developer</h5>
                 <p class="card-text">Soy un aventurero de caracter amable, inteligente e introvertido. Todo un pensador y un manitas, al que le gusta colaborar en equipo. Mi pasatiempo preferido es curiosear por la red, salir a correr al campo y jugar. Actualmente participo en algo nuevo para mi, un Boot Camp en Desarrollo Web.</p>
               </div>
-              <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack20-21.alwaysdata.net/cv/victor/" title="Enlace externo: CV Víctor" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
+              <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/victor/" title="Enlace externo: CV Víctor" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
           </div>
           </div>
           <div class="col-md-4 mb-3">
@@ -132,7 +132,7 @@
               <h5>Developer</h5>
               <p class="card-text">Mi nombre es Brayan, tengo 22 años. Soy una persona tranquila que le gusta el deporte y las series. Me encanta el frío y la lluvia y odio el verano y el calor. Actualmente estoy cursando un Boot Camp de Desarrollo web.</p>
             </div>
-            <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/brayan" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja-cv.svg"></a></button>
+            <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/brayan/" title="Enlace externo: CV Brayan" target="_blank"><img src="assets/img/svg/montanas/montana-naranja-cv.svg"></a></button>
           </div>
           </div>
           <div class="col-md-4 mb-3">
@@ -143,7 +143,7 @@
               <h5>Developer</h5>
               <p class="card-text">Luchadora y trabajadora incansable, amiga de sus compañeros, responsable y tenaz en el esfuerzo de superación, que me ha llevado hacer esta preparación y así obtener una mejor formación profesional.</p>
             </div>
-            <button type="button" class="btn btn-outline-secondary"><a href="#" title="Enlace externo: CV Anny Karolina" target="_blank"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
+            <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/anny/" title="Enlace externo: CV Anny Karolina" target="_blank"><img src="assets/img/svg/montanas/montana-mar-cv.svg"></a></button>
           </div>
           </div>
       </section>
@@ -185,7 +185,7 @@
            <h3>SMACSS</h3>
               <div class="container_wireframe">
 
-                  <iframe class="responsive-iframe" src="https://docs.google.com/presentation/d/1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70/edit?usp=sharing" scrolling="no">
+                  <iframe class="responsive-iframe" src="https://docs.google.com/presentation/d/1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70/edit" scrolling="no">
                   </iframe>
               </div>
               <h3 id="solid">SOLID</h3>
