--- a/bieivi/index.html
+++ b/bieivi/index.html
@@ -98,7 +98,7 @@
                 <h5>Product Owner</h5>
                 <p class="card-text">Soy una persona entusiasta, creativa y curiosa. Me gusta trabajar en equipo y mantenerme siempre activa. Estoy formándome como desarrolladora web porque creo que es un sector en el que siempre estaré en constante aprendizaje y eso me motiva.</p>
               </div>
-              <button type="button" class="btn btn-outline-secondary"><a href="https://fullstack20-21.alwaysdata.net/cv/amparo/" title="Enlace externo: CV Ampa" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
+              <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/amparo/" title="Enlace externo: CV Ampa" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
             </div>
           </div>
           <div class="col-md-6 mb-3">
@@ -121,7 +121,7 @@
                 <h5>Developer</h5>
                 <p class="card-text">Soy un aventurero de caracter amable, inteligente e introvertido. Todo un pensador y un manitas, al que le gusta colaborar en equipo. Mi pasatiempo preferido es curiosear por la red, salir a correr al campo y jugar. Actualmente participo en algo nuevo para mi, un Boot Camp en Desarrollo Web.</p>
               </div>
-              <button type="button" class="btn btn-outline-secondary"><a href="http://fullstack2021.online/fullstack/cv/victor/" title="Enlace externo: CV Víctor" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
+              <button type="button" class="btn btn-outline-secondary"><a href="https://accountant77.github.io/cv/" title="Enlace externo: CV Víctor" target="_blank"><img src="assets/img/svg/montanas/montana-azul-cv.svg"></a></button>
           </div>
           </div>
           <div class="col-md-4 mb-3">
@@ -185,13 +185,13 @@
            <h3>SMACSS</h3>
               <div class="container_wireframe">
 
-                  <iframe class="responsive-iframe" src="https://docs.google.com/presentation/d/1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70/edit" scrolling="no">
+                  <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=1Omi91PbDxmpnZ615PE9064NO1OAhOW_18zPOQgC-F70&pid=explorer&efh=false&a=v&chrome=false&embedded=true" scrolling="no">
                   </iframe>
               </div>
               <h3 id="solid">SOLID</h3>
               <div class="container_wireframe">
 
-                  <iframe class="responsive-iframe" src="https://docs.google.com/presentation/d/16_i2_IJOi9QNJInc26_uYVACbW_XvCXNE8GySn0sm5c/edit?usp=sharing" scrolling="no">
+                  <iframe class="responsive-iframe" src="https://docs.google.com/viewer?srcid=16_i2_IJOi9QNJInc26_uYVACbW_XvCXNE8GySn0sm5c&pid=explorer&efh=false&a=v&chrome=false&embedded=true" scrolling="no">
                   </iframe>
               </div>
 
